<resources>
    <string name="app_name">Lamour</string>
    <string name="action">角色互動</string>
    <string name="life_notice">生活提醒</string>
    <string name="shop">商店</string>
    <string name="buy_something">消費代勞</string>
    <string name="language">多國語言</string>
    <string name="title_activity_life_notice">Life_notice</string>
    <string name="title_activity_action">Action</string>
    <string name="Money_Shop">這是課金商店</string>
    <string name="Score_Shop">這是積分商店</string>
    <string name="Char_One">這是角色一</string>
    <string name="Char_Two">這是角色二</string>
    <string name="title_activity_shop">Shop</string>
</resources>
